--- a/react-vite/src/components/ProductBrowsePage/ProductBrowsePage.css
+++ b/react-vite/src/components/ProductBrowsePage/ProductBrowsePage.css
@@ -15,7 +15,7 @@
   height: 60vh;
 }
 
-.hero > .overlay {
+.productBrowserPage > .hero > .overlay {
   background-color: rgba(255, 255, 255, 0.3);
   width: 100%;
   height: 100%;
