--- a/react-vite/src/components/ProductPage/ProductPage.css
+++ b/react-vite/src/components/ProductPage/ProductPage.css
@@ -1,1 +1,64 @@
+.productPage > .container {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding: 20px 0;
+}
 
+.h-linebreak {
+  width: 100%;
+  border-bottom: 1px solid grey;
+  padding-bottom: 5px;
+  margin-bottom: 5px;
+}
+
+.product-main {
+  display: flex;
+  justify-content: space-between;
+  gap: 30px
+}
+
+.left {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.right {
+  width: 100%
+}
+
+.image-container {
+  display: flex;
+  align-items: center;
+  min-height: 500px;
+  max-width: 500px;
+  max-height: 500px;
+  width: 100%
+}
+
+.image-container > img {
+  border-radius: 10px;
+  width: 100%;
+  max-height: 100%;
+}
+
+.product-image-carousel {
+  display: flex;
+  gap: 10px;
+}
+
+.carousel-image {
+  width: 50px;
+  height: 50px;
+  > img {
+    border-radius: 5px;
+    width: 100%;
+    height: 100%;
+  };
+}
+
+.selection > button {
+  width: 100%;
+}
