--- a/react-vite/src/components/ProductPage/ProductPage.css
+++ b/react-vite/src/components/ProductPage/ProductPage.css
@@ -18,14 +18,14 @@
   gap: 30px
 }
 
-.left {
+.product-main > .left {
   display: flex;
   width: 100%;
   flex-direction: column;
   gap: 10px;
 }
 
-.right {
+.product-main > .right {
   width: 100%
 }
 
