--- a/react-vite/src/components/AdminPage/AdminPage.css
+++ b/react-vite/src/components/AdminPage/AdminPage.css
@@ -4,15 +4,14 @@
   background-repeat: no-repeat;
   background-position: -500px -200px;
   background-size: 150%;
-  height: 40vh;
-  margin-top: -50px;
+  height: 225px;
+  margin-top: -60px;
 }
 
 .adminPage > .hero > .overlay {
   background-color: rgba(255, 255, 255, 0.3);
   width: 100%;
   height: 100%;
-
 }
 
 .adminPage .content {
@@ -20,5 +19,3 @@
   justify-content: center;
   align-items: center;
 }
-
-
