Build drafts of AdminPage Console and LandingPage. Edit to Navigation bar to allow navigation. Added demo user to login modal.

--- a/react-vite/src/components/AdminPage/AdminPage.css
+++ b/react-vite/src/components/AdminPage/AdminPage.css
@@ -19,3 +19,27 @@
   justify-content: center;
   align-items: center;
 }
+
+.adminPage > .main-content {
+  display: flex;
+  padding: 50px 0;
+  .main-section {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: cent;
+  }
+}
+
+.adminPage > .main-content > .left-section {
+  width: 20%;
+  display: flex;
+  padding: 10px;
+  flex-direction: column;
+  gap: 10px;
+  list-style: none;
+  li {
+    cursor: pointer;
+  }
+}
