--- a/react-vite/src/components/ProductFormModal/ProductForm.css
+++ b/react-vite/src/components/ProductFormModal/ProductForm.css
@@ -1,5 +1,4 @@
 .newProductForm {
-  padding: 20px;
   h1 {
     text-align: center;
   }
@@ -10,6 +9,7 @@
   flex-direction: column;
   gap: 10px;
   padding: 10px;
+  width: fit-content;
   label > input {
     width: 100%
   }
@@ -27,8 +27,9 @@
 .dimensions {
   display: flex;
   gap: 5px;
+  flex-wrap: nowrap;
   label {
-    width: 70px;
+    width: 65px;
   }
 }
 
