--- a/react-vite/src/components/ProductFormModal/ProductForm.css
+++ b/react-vite/src/components/ProductFormModal/ProductForm.css
@@ -1,5 +1,5 @@
 .newProductForm {
-  h1 {
+  :is(h1) {
     text-align: center;
   }
 }
@@ -10,7 +10,7 @@
   gap: 10px;
   padding: 10px;
   width: fit-content;
-  label > input {
+  :is(label) > input {
     width: 100%
   }
 }
@@ -18,7 +18,7 @@
 .customizable {
   display: flex;
   gap: 10px;
-  label {
+  .options {
     display: flex;
     gap: 2px
   }
@@ -28,7 +28,7 @@
   display: flex;
   gap: 5px;
   flex-wrap: nowrap;
-  label {
+  .size {
     width: 65px;
   }
 }
