--- a/react-vite/src/components/AdminPage/AdminPage.css
+++ b/react-vite/src/components/AdminPage/AdminPage.css
@@ -23,6 +23,7 @@
 .adminPage > .main-content {
   display: flex;
   padding: 50px 0;
+  min-height: 60vh;
   .main-section {
     width: 100%;
     display: flex;
