--- a/react-vite/src/index.css
+++ b/react-vite/src/index.css
@@ -1,8 +1,11 @@
 /* TODO: Add sitewide styles */
+@import url('https://fonts.googleapis.com/css2?family=Aref+Ruqaa+Ink:wght@400;700&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
 * {
   margin: 0;
   padding: 0;
   color: black;
+  font-family: "Aref Ruqaa Ink", serif;
 }
 
 a {
@@ -15,7 +18,7 @@ body {
 
 .container {
   max-width: 1080px;
-  margin: 0 auto
+  margin: 0 auto;
 }
 
 img, .hero, .logo > h1 {
