--- a/react-vite/src/components/AdminPage/AdminPage.css
+++ b/react-vite/src/components/AdminPage/AdminPage.css
@@ -24,6 +24,7 @@
   display: flex;
   padding: 50px 0;
   min-height: 60vh;
+  gap: 20px;
   .main-section {
     width: 100%;
     display: flex;
@@ -34,7 +35,8 @@
 }
 
 .adminPage > .main-content > .left-section {
-  width: 20%;
+  border-right: 2px solid lightcoral;
+  width: 15%;
   display: flex;
   padding: 10px;
   flex-direction: column;
@@ -42,5 +44,6 @@
   list-style: none;
   .selection {
     cursor: pointer;
+    color: brown;
   }
 }
