--- a/react-vite/src/components/LandingPage/LandingPage.css
+++ b/react-vite/src/components/LandingPage/LandingPage.css
@@ -45,6 +45,6 @@
     border: none;
     border-radius: 30px;
     padding: 20px 40px;
-    box-shadow: 2px 2px 10px lightcoral;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.452);
   }
 }
