Fix form input color

--- a/react-vite/src/components/ProductFormModal/ProductForm.css
+++ b/react-vite/src/components/ProductFormModal/ProductForm.css
@@ -15,7 +15,7 @@
   :is(label) > input {
     width: 100%
   }
-  * {
+  h1, label, span, .file-select  {
     color: white
   }
   > .submit-button {
