--- a/react-vite/src/components/ManageProduct/ManageProduct.css
+++ b/react-vite/src/components/ManageProduct/ManageProduct.css
@@ -11,7 +11,7 @@
   justify-content: space-between;
   .details {
     padding: 5px;
-    h4, span {
+    :is(h4), :is(span) {
       color: white
     }
   }
